# aligator-cmake-example-project

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
